5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4443/executions/1667_2974.log
== TEST (2019-04-16 16:20:46) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = (kg*24 + salgado*3)
print(preco)
-- OUTPUT:
15.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:22:24) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = (kg*24 + salgado*3)
print(preco)

if(pagto >= preco):
	print("Sim")
else:
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(pagto >= preco):
NameError: name 'pagto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:17) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = round(kg*24 + salgado*3, 2)
print(preco)

if(pagto >= preco):
	print("Sim")
else:
	print("Nao")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 12, in <module>
    if(pagto >= preco):
NameError: name 'pagto' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:24:41) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = round(kg*24 + salgado*3, 2)
print(preco)

if(pgto >= preco):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:24:55) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = round(kg*24 + salgado*3, 2)
print(preco)

if(pgto >= preco):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.200519
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Sim
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:26:52) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = (kg*24.00 + salgado*3.00)
preco = round(preco, 2)
print(preco)

if(pgto >= preco):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-16 16:27:16) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = (kg*24.00 + salgado*3.00)
preco = round(preco, 2)
print(preco)

if(pgto > preco):
	print("Sim")
else:
	print("Nao")
-- OUTPUT:
15.0
Sim
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-16 16:27:42) 
-- CODE:
#Leitura da quantidade de acai
acai = float(input("quanto de acai? "))
salgado = int(input("quantos salgados? "))
pgto = float(input("valor pago: "))

kg = acai/1000

#Calculo
preco = (kg*24.00 + salgado*3.00)
preco = round(preco, 2)
print(preco)

if(pgto > preco):
	print("Sim")
else:
	print("Nao")
-- EXECUTION TIME:
0.173681
-- TEST CASE 1:
---- input:
500
1
50
---- correct output:
15.0
Sim
---- user output:
15.0
Sim
-- TEST CASE 2:
---- input:
0
2
10
---- correct output:
6.0
Sim
---- user output:
6.0
Sim
-- TEST CASE 3:
---- input:
200
0
4.8
---- correct output:
4.8
Nao
---- user output:
4.8
Nao
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
